objects/TW1_Proprietarios_Unidade__c.object
<CustomObject>
    <description>Objeto-junção utilizado para listar, na unidade, todas as contas de proprietário da unidade</description>
    <fields>
        <fullName>TW1_CPF_CNPJ__c</fullName>
        <formula>TW1_Conta__r.Tw1_N_Documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPF/CNPJ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Conta__c</fullName>
        <label>Conta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proprietários da Unidade</relationshipLabel>
        <relationshipName>Proprietarios_da_Unidade</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Emitir_Boleto__c</fullName>
        <label>Emitir Boleto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Percentual_do_Titular__c</fullName>
        <label>Percentual do Titular</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Principal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Titular</fullName>
                </value>
                <value>
                    <fullName>Não titular</fullName>
                </value>
                <value>
                    <fullName>Avalista</fullName>
                </value>
                <value>
                    <fullName>Principal</fullName>
                    <isActive>false</isActive>
                    <label>Principal</label>
                </value>
                <value>
                    <fullName>Sócio</fullName>
                    <isActive>false</isActive>
                    <label>Sócio</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Unidade__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unidade</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Proprietários da Unidade</relationshipLabel>
        <relationshipName>TW1_Proprietarios_Unidade</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Proprietário da Unidade</label>
    <listViews>
        <fullName>All</fullName>
        <columns>TW1_Unidade__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Proprietários da Unidade</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proprietários da Unidade</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>